refactor: 7주차 실습 2: API 응답 통일 및 에러 핸들링
